src/objects/SourceCode__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property code</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Source code</relationshipLabel>
        <relationshipName>Source_code1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_code__c</fullName>
        <label>Quality code</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>Source code</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Code__c</columns>
        <columns>Description__c</columns>
        <columns>Group__c</columns>
        <columns>Quality_code__c</columns>
        <columns>Property_code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Source code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>